QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Airport__c.field-meta.xml
<CustomField>
    <fullName>Airport__c</fullName>
    <label>Airport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>