QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <label>Distance</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>