QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Mileage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Cost__c</fullName>
    <formula>Distance__c *  Mileage_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mileage Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>