QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Rate__c</fullName>
    <defaultValue>0.42</defaultValue>
    <label>Mileage Rate</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>