QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Rental_Company__c.field-meta.xml
<CustomField>
    <fullName>Rental_Company__c</fullName>
    <label>Rental Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>