QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/Service_Line_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Item_Amount__c</fullName>
    <formula>Hourly_Rate__c *  Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Line Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>