QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/fields/ServiceandExpenseInvoiceMDR__c.field-meta.xml
<CustomField>
    <fullName>ServiceandExpenseInvoiceMDR__c</fullName>
    <label>ServiceandExpenseInvoiceMDR</label>
    <referenceTo>Course_nvoices__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>