QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Mileage.recordType-meta.xml
<RecordType>
    <fullName>Mileage</fullName>
    <active>true</active>
    <label>Mileage</label>
</RecordType>