QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Service_Invoice_Line.recordType-meta.xml
<RecordType>
    <fullName>Service_Invoice_Line</fullName>
    <active>true</active>
    <label>Service Invoice Line</label>
</RecordType>