QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/recordTypes/Train_Fare.recordType-meta.xml
<RecordType>
    <fullName>Train_Fare</fullName>
    <active>true</active>
    <label>Train Fare</label>
</RecordType>