QA-Project/force-app/main/default/objects/Invoice_Line_Item__c/listViews/Detailed.listView-meta.xml
<ListView>
    <fullName>Detailed</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Description__c</columns>
    <columns>Amount__c</columns>
    <columns>VAT__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Detailed</label>
</ListView>